# cpp-mono-repo-cmake-template

./: .cmake-format.py  .editorconfig  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: Cache.cmake  ClangFormat.cmake  CompilerWarnings.cmake  Hardening.cmake  Linker.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Tests.cmake  Utilities.cmake  VCEnvironment.cmake
core/: CMakeLists.txt
core/configure_files/: Config.cmake.in  config.hpp.in
core/include/myproject_core/: core.hpp
core/src/: core.cpp
core/tests/: CMakeLists.txt  tests.cpp
